force-app/main/default/objects/GTM_Notification_Settings__c/GTM_Notification_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Admin-configurable rules for the six readout/assessment-request lifecycle events that fire a Task + bell CustomNotificationType event (ADR-0010, Unit 3). Org-default row only.</description>
    <label>GTM Notification Settings</label>
</CustomObject>