force-app/main/default/objects/GTM_Notification_Settings__c/fields/Auto_Close_Approved_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Approved_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the rep's "readout approved" Task auto-closes when the rep calls GtmReadoutController.publishReadout.</description>
    <label>Auto Close Approved Tasks</label>
    <type>Checkbox</type>
</CustomField>