force-app/main/default/objects/GTM_Notification_Settings__c/fields/Auto_Close_New_Request_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_New_Request_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the originating new-request Task (if one was created) auto-closes at GtmReadoutController.submitForApproval time -- the resolved trigger moment per ADR-0010's Unit 3 addendum. Independent of Auto_Close_Submit_Tasks__c, which closes a different Task on the same call.</description>
    <label>Auto Close New Request Tasks</label>
    <type>Checkbox</type>
</CustomField>