force-app/main/default/objects/GTM_Notification_Settings__c/fields/Auto_Close_Published_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Published_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only meaningful when Published_Notification_Mode__c = 'Bell + Task'; ignored under 'None'/'Bell Only'.</description>
    <label>Auto Close Published Tasks</label>
    <type>Checkbox</type>
</CustomField>