force-app/main/default/objects/GTM_Notification_Settings__c/fields/Auto_Close_Submit_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Submit_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the approver's Task auto-closes when GtmReadoutApprovalHandler.stampApproval runs for the same record.</description>
    <label>Auto Close Submit Tasks</label>
    <type>Checkbox</type>
</CustomField>