force-app/main/default/objects/GTM_Notification_Settings__c/fields/Notify_On_Approved__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Task + bell fires for the submitting rep when a readout clears approval (GtmReadoutApprovalHandler.stampApproval).</description>
    <label>Notify On Approved</label>
    <type>Checkbox</type>
</CustomField>