force-app/main/default/objects/GTM_Notification_Settings__c/fields/Notify_On_New_Assessment_Request__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_New_Assessment_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a new GTM_Assessment_Request__c (Status = New) becomes an active Task + bell event in addition to the existing passive GtmHomeSnapshotController dashboard count.</description>
    <label>Notify On New Assessment Request</label>
    <type>Checkbox</type>
</CustomField>