force-app/main/default/objects/GTM_Notification_Settings__c/fields/Notify_On_Returned_To_Draft__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_Returned_To_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Task + bell fires for the rep when a manager calls GtmReadoutController.returnToDraft.</description>
    <label>Notify On Returned To Draft</label>
    <type>Checkbox</type>
</CustomField>