force-app/main/default/objects/GTM_Notification_Settings__c/fields/Notify_On_Submit_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_Submit_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Task + bell fires for the approver when a readout is submitted for approval (GtmReadoutController.submitForApproval).</description>
    <label>Notify On Submit For Approval</label>
    <type>Checkbox</type>
</CustomField>