force-app/main/default/objects/GTM_Notification_Settings__c/fields/Published_Notification_Mode__c.field-meta.xml
<CustomField>
    <fullName>Published_Notification_Mode__c</fullName>
    <description>What fires, if anything, on GtmReadoutController.publishReadout: None / Bell Only / Bell + Task. Plain Text (not Picklist) because GTM_Notification_Settings__c is a Hierarchy Custom Setting and Custom Settings do not support Picklist fields -- the value constraint is enforced at the Apex layer in GtmNotificationSettingsController.setNotificationSettings(), same pattern as GTM_Agent_Settings__c.Chat_Provider__c.</description>
    <label>Published Notification Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>